--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.76.1",
     "yup": "^1.4.0"
